# koni

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/docs/: README.md  package-lock.json  package.json
apps/docs/app/: globals.css  layout.tsx  manifest.ts  (+4 more)
crates/koni-cli/: Cargo.toml
crates/koni-cli/src/: agent_mcp.rs  main.rs  templates.rs
crates/koni-cli/templates/codex/research/agents/: asset-builder.toml  dashboard-reporter.toml  evidence-analyst.toml  experiment-designer.toml  gate-designer.toml  hypothesis-planner.toml  integrator.toml  lead.toml  report-writer.toml  research-scout.toml  reviewer.toml  run-operator.toml  run-planner.toml
crates/koni-cli/templates/codex/shared/skills/configure-koni/: SKILL.md
crates/koni-cli/templates/codex/shared/skills/configure-koni/agents/: openai.yaml
crates/koni-cli/templates/codex/shared/skills/configure-koni/references/: agents-and-skills.md  configuration-layers.md  run-types.md
crates/koni-cli/templates/codex/shared/skills/model-koni-work/: SKILL.md
crates/koni-cli/templates/codex/shared/skills/model-koni-work/agents/: openai.yaml
crates/koni-cli/templates/codex/shared/skills/model-koni-work/references/: execution-contracts.md  graph-model.md  rules-and-tickets.md
crates/koni-cli/templates/codex/shared/skills/operate-koni/: SKILL.md
crates/koni-cli/templates/codex/shared/skills/operate-koni/agents/: openai.yaml
crates/koni-cli/templates/codex/shared/skills/operate-koni/references/: operator-surfaces.md  recovery.md  run-lifecycle.md
crates/koni-cli/templates/codex/software/agents/: architecture-mapper.toml  change-designer.toml  implementer.toml  integrator.toml  lead.toml  reviewer.toml  risk-analyst.toml
crates/koni-cli/templates/research/: project.yaml
crates/koni-cli/templates/research/actions/: research.yaml
crates/koni-cli/templates/research/checks/: research.yaml
crates/koni-cli/templates/research/graph/: edges.yaml  nodes.yaml
crates/koni-cli/templates/research/operations/: research.yaml
crates/koni-cli/templates/research/personas/: research.yaml
crates/koni-cli/templates/research/rules/: research.yaml
crates/koni-cli/templates/software/: actions.yaml  checks.yaml  cockpit.yaml  graph.yaml  lifecycle.yaml  operations.yaml  personas.yaml  profile.yaml  project.yaml  reports.yaml  rules.yaml  workflows.yaml
crates/koni-cli/templates/software/run-types/: large.yaml  medium.yaml  small.yaml
crates/koni-core/: Cargo.toml
crates/koni-core/src/: agent.rs  catalog.rs  codex.rs  codex_preflight.rs  config.rs  control.rs  engine.rs  error.rs  expr.rs  external_loop.rs  gh_adapter.rs  git.rs  graph.rs  lib.rs  parity.rs  persistent_lock.rs  pipeline.rs  process.rs  questions.rs  receipt_coverage.rs  state.rs  workflow.rs
crates/koni-core/tests/: research_conclusion_contract.rs  research_epistemic_profile.rs  research_profile.rs  research_result_contracts.rs  run_lifecycle.rs  updog_profile.rs
crates/koni-tui/: Cargo.toml
crates/koni-tui/examples/: populated_showcase.rs
crates/koni-tui/src/: app.rs  codex_models.rs  configure.rs  graph.rs  help.rs  lib.rs  model.rs  ui.rs
docs/: architecture.md  codex-resources.md  configuration.md  control-center.md  getting-started.md  maturity.md  migration.md  philosophy.md  runtime-and-git.md
fixtures/updog-repo/: AGENTS.md  package.json
packaging/homebrew/: README.md  koni.rb
profiles/research/: README.md  profile.yaml
reference/parity/: README.md  normalization.yaml  scenarios.yaml
scripts/: check-brand.sh
(+62 files in other folders)
