[package]
name = "koni-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Graph-compiled control plane for reliable agentic work"
keywords = ["agents", "automation", "graph", "workflow", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "koni"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
git2.workspace = true
koni-core = { version = "0.1.0", path = "../koni-core" }
koni-tui = { version = "0.1.0", path = "../koni-tui" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
