[package]
name = "koni-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Terminal control center for Köni"
keywords = ["agents", "tui", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
koni-core = { version = "0.1.0", path = "../koni-core" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
unicode-width.workspace = true

[dev-dependencies]
tempfile.workspace = true
